openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: daddy
  labels:
    app.kubernetes.io/part-of: daddy
