openshift/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daddy-app
  namespace: daddy
  labels:
    app: daddy-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: daddy-app
