openshift/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: daddy-dev
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
